Fixed align center of buttons of map

--- a/docs/css/willy_map.css
+++ b/docs/css/willy_map.css
@@ -1,6 +1,5 @@
 svg { width:100%; height: 100% }
       .button_label {
-          width: 1024px;
           height: 50px;
           text-align: center;
       }
@@ -87,7 +86,6 @@ svg { width:100%; height: 100% }
           margin: 5px;
           border-radius: 2.5px;
           text-decoration: none;
-          padding: 5px;
           font-size: ``px;
           transition: .3s;
           -webkit-transition: .3s;
